set video file.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 			<div class="content-wrapper">
 				<div class="content">
 					<div class="video-src-selector">
-						<button class="webcam-start-button">
+						<button
+							class="webcam-start-button"
+							onclick="startWebcam()"
+						>
 							Turn On Webcam
 						</button>
 						<label for="video-src">OR, Select a video:</label>
