--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
 					<div class="media-wrapper">
 						<!-- original video -->
 						<div class="input-content">
-							<video
-								id="video"
-								width="640"
-								height="360"
-								src="#"
-								loop
-								controls
-								muted
-							></video>
+							<div class="videoWrapper">
+								<video
+									id="video"
+									src="#"
+									loop
+									controls
+									muted
+								></video>
+							</div>
 						</div>
 
 						<!-- processed video -->
 						<div class="output-content">
-							<div>
+							<div class="videoWrapper">
 								<canvas
 									id="output-canvas"
 									width="640"
