fixed layout for webcam.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<div class="media-wrapper">
 						<!-- original video -->
 						<div class="input-content">
-							<div class="videoWrapper">
+							<div class="video-wrapper">
 								<video
 									id="video"
 									src="#"
@@ -65,7 +65,7 @@
 
 						<!-- processed video -->
 						<div class="output-content">
-							<div class="videoWrapper">
+							<div id="outputVideoWrapper">
 								<canvas
 									id="output-canvas"
 									width="640"
