added video src selection status.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 						<label for="video-src">OR, Select a video:</label>
 						<input type="file" id="videoFile" name="videoFile" />
 					</div>
+					<div class="src-status">
+						<p id="srcStatusText">No video source selected.</p>
+					</div>
 					<div class="process-start-btn">
 						<button class="start-button" onclick="startProcess()">
 							Start Processing
