--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 		<div class="container">
 			<div class="content-wrapper">
 				<div class="content">
-					<hr />
+					
+					<div class="video-src-selector">
+						<input type="file" id="videoFile" name="videoFile" />
+					</div>
 					<div class="media-wrapper">
 						<!-- original video -->
 						<div class="input-content">
