--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 			<div class="content-wrapper">
 				<div class="content">
 					
-					<div class="video-src-selector">
+<!-- 					<div class="video-src-selector">
 						<input type="file" id="videoFile" name="videoFile" />
-					</div>
+					</div> -->
 					<div class="media-wrapper">
 						<!-- original video -->
 						<div class="input-content">
