--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<div class="container">
+			<hr>shape detection version 0.4</hr>
 			<div class="content-wrapper">
 				<div class="content">
 					
