--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 							<div id="outputVideoWrapper">
 								<canvas
 									id="output-canvas"
+									width="640"
+									height="360"
 								></canvas>
 							</div>
 						</div>
