--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						</div>
 
 						<!-- processed video -->
-						<p id="state">status</p>
+						<p id="status">status</p>
 						<div class="output-content">
 							<div id="outputVideoWrapper">
 								<canvas
