--- a/index3.html
+++ b/index3.html
@@ -7,6 +7,9 @@
 		<title>Real-time Shape and Color Detection with OpenCV.js</title>
 		<!-- css -->
 		<link rel="stylesheet" href="assets/css/main.css" />
+		
+		  <script src="jquery.js"></script>
+        <link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	<body>
 		<div class="container">
@@ -46,6 +49,7 @@
 		</div>
 
 		<!-- script -->
+	 <script src="three.min.js"></script>
 		<script src="assets/js/tri.js"></script>
 		<script
 			async
