--- a/index3.html
+++ b/index3.html
@@ -34,6 +34,7 @@
 							</div>
 						</div>
 
+						<img id="ymz" src="star.png" />
 						<!-- processed video -->
 						<p id="status">status</p>
 						<div class="output-content">
